[gd_scene load_steps=3 format=3 uid="uid://dtow4yped1ran"]

[ext_resource type="Script" uid="uid://bwedv5n1ymobs" path="res://addons/hyh.digression/editor/dialogs/variable_create_dialog/VariableCreateDialog.gd" id="1_buqw8"]
[ext_resource type="PackedScene" uid="uid://gjnoxtngguo5" path="res://addons/hyh.digression/editor/dialogs/variable_create_dialog/VariableCreateDialogContents.tscn" id="1_epo82"]

[node name="VariableCreateDialog" type="Window"]
title = "Create Variable"
initial_position = 2
size = Vector2i(360, 454)
transient = true
exclusive = true
unresizable = true
script = ExtResource("1_buqw8")

[node name="BackgroundPanel" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VariableCreateDialogContents" parent="." instance=ExtResource("1_epo82")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="canceled" from="VariableCreateDialogContents" to="." method="_on_variable_create_dialog_contents_canceled"]
[connection signal="created" from="VariableCreateDialogContents" to="." method="_on_variable_create_dialog_contents_created"]
[connection signal="resized" from="VariableCreateDialogContents" to="." method="_on_variable_create_dialog_contents_resized"]
